<resources>
    <string name="app_name">Мои фильмы</string>

    <string name="search_hint">Введите название</string>

    <string name="main_title">Что будете смотреть\nсегодня?</string>
    <string name="top_rated">Высокий рейтинг</string>
    <string name="popular">Популярные</string>
    <string name="upcoming">Новинки</string>

    <string name="home">Главная</string>

    <string name="more">Ещё…</string>
    <string name="tv_shows">Сериалы</string>
    <string name="profile">Профиль</string>
    <string name="search">Поиск</string>
    <string name="later">44\n Буду смотреть</string>

    <string name="tv_show">Телесериалы</string>
    <string name="close">закрыть</string>

    <string-array name="tab_titles">
        <item>23\n Понравилось</item>
        <item>@string/later</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeholder">Пёс Киноман</string>

    <string name="studio">Студия</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="to_favorite">В избранное</string>
    <string name="watch">Смотреть</string>
    <string name="poster">Постер</string>
    <string name="full_hd_label">Отметка full hd</string>
    <string name="now_playing">Уже в кино</string>
    <string name="check_net_connection">Проверьте подключение к сети</string>
    <string name="error">\"Ошибка \"</string>
    <string name="remove_from_favorite">Фильм удалён из избранного</string>
    <string name="add_to_favorite">Фильм добавлен в избранное</string>
</resources>
