<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.mikhailskiy.intensiv.ui.movie_details.MovieDetailsFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blueDark"
        android:padding="@dimen/container_padding_size"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/details_movie_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/material_margin_normal"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/full_hd_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Заголовок фильма" />

            <ImageView
                android:id="@+id/full_hd_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/full_hd_label"
                android:src="@drawable/ic_full_hd"
                app:layout_constraintBottom_toBottomOf="@id/details_movie_title"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/button_watch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_margin_normal"
                android:background="@drawable/watch_button_background"
                android:text="@string/watch"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/details_movie_title" />

            <RatingBar
                style="@style/Base.Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="true"
                android:numStars="5"
                android:progressBackgroundTint="@color/colorControlNormal"
                android:stepSize="0.5"
                app:layout_constraintBottom_toBottomOf="@id/button_watch"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/button_watch"
                tools:rating="4" />

            <TextView
                android:id="@+id/details_movie_description"
                style="@style/MovieDetailsPlainText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_watch"
                tools:text="Фабула фильма\nбла\nбла\nбла\nбла\nбла\nКонец фабулы" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="right"
                app:constraint_referenced_ids="studio_label,genre_label,year_label" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/actors_recycler_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_margin_normal"
                android:orientation="horizontal"
                android:overScrollMode="never"
                android:scrollbars="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/details_movie_description"
                tools:itemCount="6"
                tools:listitem="@layout/item_actor" />

            <TextView
                android:id="@+id/studio_label"
                style="@style/MovieDetailsLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_margin_normal"
                android:text="@string/studio"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/actors_recycler_view" />

            <TextView
                android:id="@+id/genre_label"
                style="@style/MovieDetailsLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_margin_small"
                android:text="@string/genre"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/studio_label" />

            <TextView
                android:id="@+id/year_label"
                style="@style/MovieDetailsLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_margin_small"
                android:text="@string/year"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/genre_label" />

            <TextView
                android:id="@+id/textView_studio"
                style="@style/MovieDetailsPlainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/material_margin_normal"
                app:layout_constraintBottom_toBottomOf="@id/studio_label"
                app:layout_constraintStart_toStartOf="@id/barrier"
                tools:text="Название студии" />

            <TextView
                android:id="@+id/textView_genre"
                style="@style/MovieDetailsPlainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/material_margin_normal"
                app:layout_constraintBottom_toBottomOf="@id/genre_label"
                app:layout_constraintStart_toStartOf="@id/barrier"
                tools:text="Жанр 1, Жанр 2" />

            <TextView
                android:id="@+id/textView_year"
                style="@style/MovieDetailsPlainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/material_margin_normal"
                app:layout_constraintBottom_toBottomOf="@id/year_label"
                app:layout_constraintStart_toStartOf="@id/barrier"
                tools:text="1970" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="false"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/image_poster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/poster"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_avatar"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_details"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>